fix spacing publication links

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -538,10 +538,8 @@ footer.sticky-bottom {
         a.btn {
           color: var(--global-text-color);
           border: 1px solid var(--global-text-color);
-          padding-left: 1rem;
-          padding-right: 1rem;
-          padding-top: 0.25rem;
-          padding-bottom: 0.25rem;
+          padding: 0.25rem 1rem;
+          margin: 0.5rem;
           &:hover {
             color: var(--global-hover-color);
             border-color: var(--global-hover-color);
